--- a/style.css
+++ b/style.css
@@ -5,25 +5,37 @@
 }
 
 header {
-       padding: 10px;
-       background-color: none;
-       margin: auto;
-       border-style: solid;
-       border-color: black;
-       
+       background-color: black;
+       font-family: monospace;
+       color: black;
     }
+
+h1 {
+    text-align: left;
+    font-size: 75px;
+    font-weight: 10px;
+    color: whitesmoke;
+}
 
 h2 {
     text-align: center;
-    font-size: 30px;
+    font-size: 25px;
+    font-family: monospace;
     background-color: black;
-    margin-bottom: 20px;
+    padding-bottom: 40px;
     color: whitesmoke;
-    font-size: 36px;
+    
     }
 
-p {
+h3 {
+    text-align: left;
     font-size: 25px;
+    font-family: monospace;
+    color: whitesmoke;
+}
+
+p {
+    font-size: 15px;
     color: whitesmoke;
     text-align:center;
     font-family: Arial, Helvetica, sans-serif;
@@ -31,15 +43,16 @@ p {
     }
 
 header nav ul li {
-    vertical-align: auto;
     display: inline-block;
-    margin-left: 25px;
-    border-style: outset;
+    margin-left: 75px;
+    border-style: none;
+    color: whitesmoke;
     }
 
 header nav {
-        padding: 5px;
-        float: none;
+        padding: 15px;
+        margin-right: 20px;
+        float: right;
         font-size: 20px;
     }
 
@@ -50,10 +63,11 @@ header nav {
         background-size: cover;
         background-position: top;
         margin: auto;
-        padding: 10px;
+       
     }
 
 .sections {
+        margin-top: 20px;
         margin-bottom: 20px;
         padding: 50px;
         height: 300px;
@@ -62,12 +76,46 @@ header nav {
         border-color: blueviolet;
     }
 
-.sections-img {
+.sections img {
     max-height: 200px;
 
 }
 
 .float {
     float: left;
-    margin: 25px;
+    padding-bottom: 15px;
 } 
+
+
+.footer-contact {
+    margin-top: 20px;
+        margin-bottom: 20px;
+        padding: 50px;
+        height: 50px;
+        background-color: black;
+        border-style: dotted;
+        border-color: blueviolet;
+    }
+
+footer nav ul li {
+    display: inline-block;
+    margin-left: 105px;
+    border-style: none;
+    color: whitesmoke;
+
+    }
+
+footer nav {
+    margin-bottom: 20px;
+    margin-right: 20px;
+    float: right;
+    font-size: 20px;
+    
+    }   
+
+@media screen and (max-width: 750px) {
+    body {
+        width: 100%;
+    }
+    
+    }
