--- a/style.css
+++ b/style.css
@@ -1,121 +1,184 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+body{
+    max-height: 1300px;
 }
 
-header {
-       background-color: black;
-       font-family: monospace;
-       color: black;
-    }
-
-h1 {
-    text-align: left;
-    font-size: 75px;
-    font-weight: 10px;
-    color: whitesmoke;
+a{
+    font-size: 55px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-h2 {
+.nav-container{
+    background-color:none;
+    border-style: hidden;
+    height: 70px;
+    border-width: 1px;
+}
+
+#about-me{
+position: relative;
+text-align: center;
+width: 400px;
+height: 70px;
+bottom: 3px;
+background-color: none;
+transition: all .2s ease-in-out;
+background-color: white;
+}
+
+#work:hover { transform: scale(1.1); 
+    background-color: rgb(222, 159, 152);
+}
+#contact-me:hover { transform: scale(1.1); 
+    background-color:rgb(222, 159, 152);
+}
+#about-me:hover { transform: scale(1.1); 
+    background-color: rgb(222, 159, 152);
+}
+
+#work-info:hover{ transform: scale(1.1); 
+    background-color: rgb(222, 159, 152);
+}
+#contact-me-info:hover{ transform: scale(1.1); 
+    background-color: rgb(222, 159, 152);
+}
+#about-me-info:hover{ transform: scale(1.1); 
+    background-color: rgb(222, 159, 152);
+}
+
+#work{
+    position: relative;
+    left: 405px;
+    width: 540px;
+    border-width: 1px;
+    background-color: white; 
+    height: 70px;
+    border-style: hidden;
     text-align: center;
-    font-size: 25px;
-    font-family: monospace;
-    background-color: black;
-    padding-bottom: 40px;
-    color: whitesmoke;
-    
-    }
-
-h3 {
-    text-align: left;
-    font-size: 25px;
-    font-family: monospace;
-    color: whitesmoke;
+    bottom: 73px;
+    transition: all .2s ease-in-out; 
 }
 
-p {
-    font-size: 15px;
-    color: whitesmoke;
-    text-align:center;
-    font-family: Arial, Helvetica, sans-serif;
-    
-    }
+#contact-me{
+    position: relative;
+    left: 950px;
+    width: 472px;
+    border-width: 1px;
+    background-color: white;
+    height: 70px;
+    border-style: hidden;
+    text-align: center;
+    bottom: 142px;
+    transition: all .2s ease-in-out; 
+}
 
-header nav ul li {
-    display: inline-block;
-    margin-left: 75px;
-    border-style: none;
-    color: whitesmoke;
-    }
+.h1-container{
+    height: 185px;
+    width: 695px;
+    bottom: 1090px;
+    left: 725px;
+    position: relative;
+    background-color: whitesmoke;
+    border-width: 1px;
+    border-style: solid;
 
-header nav {
-        padding: 15px;
-        margin-right: 20px;
-        float: right;
-        font-size: 20px;
-    }
+}
 
-.backgroundpic {
-        height: 700px;
-        width: 100%;
-        background-image: url(https://thumbor.forbes.com/thumbor/fit-in/1200x0/filters%3Aformat%28jpg%29/https%3A%2F%2Fblogs-images.forbes.com%2Flaurencebradford%2Ffiles%2F2016%2F12%2Flaptop-code-1200x800.jpeg);
-        background-size: cover;
-        background-position: top;
-        margin: auto;
-       
-    }
-
-.sections {
-        margin-top: 20px;
-        margin-bottom: 20px;
-        padding: 50px;
-        height: 300px;
-        background-color: black;
-        border-style: dotted;
-        border-color: blueviolet;
-    }
-
-.sections img {
-    max-height: 200px;
-
-    }
-
-.float {
-    float: left;
-    padding-bottom: 15px;
-    } 
+h1{
+    text-align: center;
+    font-size: 64px;
+}
 
 
-.footer-contact {
-    margin-top: 20px;
-        margin-bottom: 20px;
-        padding: 50px;
-        height: 50px;
-        background-color: black;
-        border-style: dotted;
-        border-color: blueviolet;
-    }
+#about-me-info{
+    width: 695px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    height: auto;
+    height: 400px;
+    background-color:whitesmoke;
+    text-align: center;
+    font-family:fantasy;
+    transition: all .2s ease-in-out;
+}
 
-footer nav ul li {
-    display: inline-block;
-    margin-left: 105px;
-    border-style: none;
-    color: whitesmoke;
+#work-info{
+    position: relative;
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+    height: 496px;
+    width: 695px;
+    background-color: whitesmoke;
+    text-align: center;
+    font-family: fantasy;
+    transition: all .2s ease-in-out;
+}
 
-    }
+#contact-me-info{
+    border-style: solid;
+    position: relative;
+    /* bottom: 1100px; */
+    transition: all .2s ease-in-out;
+}
 
-footer nav {
-    margin-bottom: 20px;
-    margin-right: 20px;
-    float: right;
-    font-size: 20px;
-    
-    }   
+.card4:hover { transform: scale(1.1); }
+.card3:hover { transform: scale(1.1); }
+.card2:hover { transform: scale(1.1); }
+.card1:hover { transform: scale(1.1); }
 
-@media screen and (max-width: 750px) {
-    body {
-        width: 100%;
-    }
-    
-    }
+.card4,
+.card3,
+.card2,
+.card1{
+    margin: 10px;
+    margin-top: 10px;
+    border-style: solid;
+    border-width: 1px;
+    transition: all .2s ease-in-out;
+    position: relative;
+    bottom: 40px; 
+    background-color: white;
+}
+
+.card-links{
+    font-size: 10px;
+}
+ 
+h3{
+    font-size: 30px;
+    font-style: italic;
+    font-style: oblique;
+}
+
+#span-text{
+    position: relative;
+    left: 260px;
+    top: 25px;
+    font-family: fantasy;
+}
+
+.footer{
+    font-family: fantasy;
+    position: relative;
+    border-style: solid;
+    border-width: 1px;
+    right: 725px;
+    width: 1420px;
+    height: 150px;;
+    display: flex;
+    background-color: whitesmoke;
+}
+
+#footer-h3{
+    position: relative;
+    left: 650px;
+    text-align: center;
+}
+
+
+.footer-text{
+    margin-left: 150px;
+    position: relative;
+    top: 80px;
+}
